--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -55,6 +55,7 @@
     "graphql-shield": "^2.2.7",
     "graphql-tools": "^3.1.1",
     "graphql-yoga": "^1.16.1",
+    "heroku-ssl-redirect": "^0.0.4",
     "ioredis": "^4.0.0",
     "merge-graphql-schemas": "^1.5.1",
     "node-fetch": "^2.1.2",
