--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -46,6 +46,7 @@
     "express": "^4.16.3",
     "express-rate-limit": "^3.0.2",
     "express-session": "^1.15.6",
+    "express-sslify": "^1.2.0",
     "faker": "^4.1.0",
     "glob": "^7.1.2",
     "graphql": "^0.13.2",
