--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "postinstall": "yarn run build:server",
+    "postinstall": "./postinstall.sh",
     "build:server": "lerna run build --scope={@airbnb/common,@airbnb/server}",
     "build:web": "lerna run build --scope={@airbnb/common,@airbnb/controller,@airbnb/web}"
   },
@@ -23,7 +23,7 @@
     ]
   },
   "devDependencies": {
-    "lerna": "^3.1.2"
+    "lerna": "^3.2.1"
   },
   "nohoist": [
     "**/react-native",
