--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -13,7 +13,7 @@
     "refresh:types": "yarn generate:types && yarn build"
   },
   "dependencies": {
-    "graphql": "^0.13.2",
+    "graphql": "^14.0.0",
     "graphql-tag": "^2.9.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
@@ -22,14 +22,14 @@
     "remove": "^0.1.5"
   },
   "devDependencies": {
-    "@babel/types": "^7.0.0-beta.53",
-    "@types/node": "^10.5.6",
+    "@babel/types": "^7.0.0",
+    "@types/node": "^10.9.4",
     "@types/react": "^16.4.0",
-    "@types/react-dom": "^16.0.6",
+    "@types/react-dom": "^16.0.7",
     "apollo": "^1.7.1",
     "apollo-codegen": "^0.20.2",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.3"
   }
 }
