--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,6 +20,7 @@
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
     "react-dropzone": "^5.0.1",
+    "react-geosuggest": "^2.8.0",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.17.0",
     "yup": "^0.26.3"
@@ -37,6 +38,7 @@
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
     "@types/react-dropzone": "^4.2.2",
+    "@types/react-geosuggest": "^2.7.7",
     "@types/react-router-dom": "^4.2.7",
     "@types/yup": "^0.24.9",
     "typescript": "^3.0.3"
