--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.4.2",
     "react-dropzone": "^5.0.1",
     "react-geosuggest": "^2.8.0",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.17.0",
     "yup": "^0.26.3"
